Add "Poll feeds" example to `index.md` with runnable Java snippet.